[tool.poetry]
name = "personal-templates"
version = "0.0.1"
description = "The author's various templates for tasks in research and data science."
authors = ["O957 <127630341+O957@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
